--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -12,6 +12,16 @@
   {% when "google-plus" %}
     <h4 class="page__comments-title">{{ comments_label }}</h4>
     <section class="g-comments" data-href="{{ base_path }}{{ page.url }}" data-first_party_property="BLOGGER" data-view_type="FILTERED_POSTMOD">Loading Google+ Comments ...</section>
+  {% when "utterances" %}
+    <h2>Comments</h2>
+    <div id="utterances"></div>
+    <script src="https://utteranc.es/client.js"
+      repo="LargeEpsilon/LargeEpsilon.github.io"
+      issue-term="pathname"
+      theme="github-light"
+      crossorigin="anonymous"
+      async>
+    </script>
   {% when "staticman" %}
     <section id="comments">
       {% if site.repository and site.staticman.branch %}
@@ -37,7 +47,7 @@
         <h4 class="page__comments-title">{{ site.data.ui-text[site.locale].comments_label | default: "Leave a Comment" }}</h4>
         <p class="small">{{ site.data.ui-text[site.locale].comment_form_info | default: "Your email address will not be published. Required fields are marked" }} <span class="required">*</span></p>
         <!-- <form id="new_comment" class="page__comments-form js-form form" method="post" action="https://api.staticman.net/v1/entry/{{ site.repository }}/{{ site.staticman.branch }}"> -->
-        <form id="new_comment" class="page__comments-form js-form form" method="post" action="https://large-comments.herokuapp.com/v3/entry/github/LargeEpsilon/LargeEpsilon.github.io/main/comments"></form>
+        <form id="new_comment" class="page__comments-form js-form form" method="post" action="https://large-comments.herokuapp.com/v3/entry/github/LargeEpsilon/LargeEpsilon.github.io/_data/comments"></form>
           <div class="form__spinner">
             <i class="fa fa-spinner fa-spin fa-3x fa-fw"></i>
             <span class="sr-only">{{ site.data.ui-text[site.locale].loading_label | default: "Loading..." }}</span>
